--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400, 700&display=swap');
 
 /* Global Styles */
 :root {
@@ -308,6 +308,9 @@ img {
 }
 
 /* Forms */
+.form {
+}
+
 input {
   margin: 1.2rem 0;
 }
